postgresql-unit (3.2) UNRELEASED; urgency=medium

  * Support exponents written using Unicode superscript characters.

 -- Christoph Berg <myon@debian.org>  Sat, 08 Apr 2017 18:36:50 +0200

postgresql-unit (3.1) experimental; urgency=medium

  * Reupload to Debian, the 3.0 tarball uploaded contained generated files
    that broke out-of-tree builds. No source changes.

 -- Christoph Berg <myon@debian.org>  Thu, 23 Mar 2017 11:25:43 +0100

postgresql-unit (3.0) experimental; urgency=medium

  * Support defining new units at runtime.
  * Import unit definitions from GNU units.
  * Add sqrt() and cbrt() functions.
  * Extension is not relocatable after installation anymore.
  * Bump extension version to 3.
  * Bump minimum supported PostgreSQL version to 9.5 so we can use
    hash_create(HASH_BLOBS).
  * Bump license to GPL-3+ to match GNU units' license.

 -- Christoph Berg <myon@debian.org>  Wed, 22 Mar 2017 18:33:22 +0100

postgresql-unit (2.0) unstable; urgency=medium

  * Support IEC binary prefixes for byte.
  * Support United States customary units: in, ft, yd, mi, oz, lb.
  * Add variance and stddev aggregates; bump extension version to 2.

 -- Christoph Berg <myon@debian.org>  Mon, 09 Jan 2017 22:24:23 +0100

postgresql-unit (1.1) unstable; urgency=medium

  * Use float8out_internal to format floats on output.

 -- Christoph Berg <myon@debian.org>  Mon, 31 Oct 2016 11:55:43 +0100

postgresql-unit (1.0) unstable; urgency=medium

  * Initial release.

 -- Christoph Berg <myon@debian.org>  Thu, 22 Sep 2016 15:42:55 +0200